# refraction-raytracing-dxr

./: CMakeLists.txt  LICENSE  MaterialRefraction.cpp  MaterialRefraction.hpp  Mesh.cpp  Mesh.hpp  RayTracing.hlsl  Refraction.cpp  Refraction.hpp  RefractionDemo.cpp  RefractionDemo.hpp  Shader1.hlsl  UploadBuffer.hpp  WinMain.cpp  ott.mtl  stdafx.h
